Onclick Append to Display functionality add now, restricted the max. length to 12 and implemented onClicking the button display gets update functionality.

--- a/src/styles.css
+++ b/src/styles.css
@@ -28,6 +28,10 @@
   border: 1vh grey solid;
   border-style: inset;
 }
+
+#displayText {
+  color: white;
+}
 #keypad {
   margin-top: 15vh;
   border: 1px slategray solid;
