Changed button color

--- a/src/styles.css
+++ b/src/styles.css
@@ -55,7 +55,7 @@
 }
 
 .key {
-  background-image: radial-gradient(circle, #a8eb12, #00bf72, #051937);
+  background-image: radial-gradient(circle, #5ffbf1, #86a8e7, #845ec2);
   font-size: 1rem;
   border: 1px solid cyan;
   border-radius: 50%;
